# roch_objects_detection

./: CMakeLists.txt  README.md  package.xml
launch/: standalone.launch
src/: simple_detection.cpp
